Bug 289351 - Editing mulitple transactions - cannot change Memo field
Summary: Editing mulitple transactions - cannot change Memo field
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-19 12:10 UTC by Jonathan Clark
Modified: 2014-01-03 23:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Clark 2011-12-19 12:10:38 UTC
Version:           4.5.3 (using KDE 4.7.2) 
OS:                Linux

I created a scheduled payment from one payment, in which I had made a comment in the Memo field. More than a year down the track I notice the comment in the Memo field is no longer appropriate. I wish to remove it from many transactions.

I go to Ledgers, specify a search value, get listed just the transactions I wish to change. I ctrl click the ones I want to change, right mouse click, Edit, and in the transaction detail window a) the Memo field is blank b) if I change it the 'tick enter' field does not cease to be greyed out, i.e. the form does not take my change.

Note I can make changes on multiply selected transactions for such things as changing the payee or the date. It doesn't work for the Memo field. I haven't tested every possible field to see which work and which don't.

P.S. Is there a work-around other than (which I did) changing each transaction individually?

Reproducible: Always

Steps to Reproduce:
See Details

Actual Results:  
See Details

Expected Results:  
See Details
Comment 1 Cristian Oneț 2012-01-06 12:02:03 UTC
Git commit 9485826cfb50816d2df4dac9709b4beb255b8b75 by Cristian Oneț.
Committed on 06/01/2012 at 12:56.
Pushed by conet into branch 'master'.

Allow editing the memo of multiple transactions.

The memo can't be cleared (the text can't be empty) but it can be changed.

M  +5    -0    kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/9485826cfb50816d2df4dac9709b4beb255b8b75
Comment 2 Cristian Oneț 2012-01-06 12:05:53 UTC
Git commit ef273b816dde6fee855eadfb6f20d39c3756a9d2 by Cristian Oneț.
Committed on 06/01/2012 at 12:56.
Pushed by conet into branch '4.6'.

Allow editing the memo of multiple transactions.

The memo can't be cleared (the text can't be empty) but it can be changed.
(cherry picked from commit 9485826cfb50816d2df4dac9709b4beb255b8b75)

M  +5    -0    kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/ef273b816dde6fee855eadfb6f20d39c3756a9d2
Comment 3 Jonathan Clark 2013-09-04 07:52:28 UTC
I see this bug is back in version 4.8.5
Comment 4 allan 2013-09-04 10:50:56 UTC
(In reply to comment #3)
> I see this bug is back in version 4.8.5

4.8.5 is the KDE version.  What KMM version are you using?

Irrespective of that, however, you are correct.

It should be possible to fix this, but further testing will be required.  The complication is that, when starting a multi-transaction edit, all fields are blank, and it is necessary to make an entry into the required field to trigger the notification of an edit.  It is straight forward to edit the memo content unless a blank memo is required, as an empty memo field would not be recognised.  If a blank memo field is your requirement, it may be necessary to achieve this with a 'space' character.
Comment 5 Jonathan Clark 2013-09-04 10:59:25 UTC
(In reply to comment #4)

Silly me, KMM is 4.6.1. That's what I get using vanilla Ubuntu Precise Pangolin.

I understand about using a space to delete previous comments.

Thanks.
Comment 6 allan 2013-09-04 12:31:20 UTC
(In reply to comment #5)
> (In reply to comment #4)
> 
> Silly me, KMM is 4.6.1. That's what I get using vanilla Ubuntu Precise
> Pangolin.
> 
> I understand about using a space to delete previous comments.
> 
> Thanks.

An afterthought.  Are you sure about being on 4.6.1?  The changes which affected this were implemented in January 2013, and wouldn't be in 4.6.1, and  if you are pre Jan 2012 you will be pre the earlier fix.
Comment 7 Jonathan Clark 2013-09-05 12:57:24 UTC
I really am on 4.6.1. It is the version that comes with Ubuntu 12.04, the current long term supported Ubuntu release.
Comment 8 allan 2013-09-05 13:35:21 UTC
(In reply to comment #7)
> I really am on 4.6.1. It is the version that comes with Ubuntu 12.04, the
> current long term supported Ubuntu release.

Yes, I was sure you would be.  Snag is, 4.6.1 predates the initial fix, which is in only 4.6.2 and 4.6.3!  So, if you definitely have had it working, you appear to have regressed.  Have you done a re-install, perhaps?

I was going to say you can install 4.6.3 from Claydoh's PPA, but probably that is up-to-date and without this fix.  Are you able to get 4.6.2, or the stable/original 4.6.3?
Comment 9 allan 2013-10-21 21:27:47 UTC
I've come back to this after a couple of diversions.

Cristian's fix was inadvertently removed after 4.6.3

This fix allowed a multi-transaction memo edit to have a blank field, albeit with a space character to trigger a connect.

I've gone on from that a bit by allowing the field to actually be empty, again albeit with a space character to trigger a connect, but then to be removed so the field is really empty.

I know this topic was brought up before - I've just found it -
"I know you can select multiple transactions in the ledger, and when you click "Edit" it will make the changes you specify in all the selected transactions.  However, what I want to do is clear out the memo in the transactions.  I know I can type a single space, for example, but that still leaves a memo with a single space.  Is there any way to do this?  I'd enter a wishlist - but I'm not sure if there is even a reasonable GUI for it, since it would require either a checkbox next to each field that could be cleared, or perhaps some quoting mechanism, so you could type some string unlikely to actually occur, and then need to quote it somehow if that IS the string you want. "

Any thoughts on whether to go ahead with the extra?
Comment 10 allan 2013-10-31 12:57:01 UTC
Submitted to Reviewboard 24 Oct
https://git.reviewboard.kde.org/r/113427/
Comment 11 allan 2013-12-31 21:19:19 UTC
(In reply to comment #10)
> Submitted to Reviewboard 24 Oct
> https://git.reviewboard.kde.org/r/113427/

Just hoping someone might have a little time to spare to have a look at this, please.
Comment 12 allan 2014-01-03 23:50:37 UTC
Git commit 3422b775db80fd1956775eb94370c9e950f2b52e by Allan Anderson.
Committed on 24/10/2013 at 22:34.
Pushed by allananderson into branch 'master'.
Reinstate previous fix, allow memo field to be empty, and allow date to be edited.

M  +1    -1    kmymoney/dialogs/investactivities.cpp
M  +2    -0    kmymoney/dialogs/investactivities.h
M  +19   -5    kmymoney/dialogs/investtransactioneditor.cpp
M  +3    -2    kmymoney/dialogs/investtransactioneditor.h
M  +28   -5    kmymoney/dialogs/transactioneditor.cpp
M  +4    -0    kmymoney/dialogs/transactioneditor.h

http://commits.kde.org/kmymoney/3422b775db80fd1956775eb94370c9e950f2b52e