Allow editing the memo of multiple transactions.

The memo can't be cleared (the text can't be empty) but it can be changed.

BUG: 289351